# leadrocks_webscraping

./: .env  config.py  main.py  pyproject.toml  user_data.json
app/login/: login_automation.py
app/output/: output_file.json  scrapped_data.csv
app/scrap/: doubt.py  dynamic_scrap.py
app/test/: test_login.py  test_scrap.py
